--- a/src/app/nav-record/nav-record.component.html
+++ b/src/app/nav-record/nav-record.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h2>MockRecord Fields</h2>          
+    <h2>Customer Fields</h2>          
     <table class="table table-hover">
       <thead>
         <tr>
